--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -7,10 +5,16 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
+
     environment:
-      APPWRITE_ENDPOINT: ${APPWRITE_ENDPOINT}
-      APPWRITE_PROJECT_ID: ${APPWRITE_PROJECT_ID}
-      APPWRITE_KEY: ${APPWRITE_KEY}
+      APPWRITE_ENDPOINT: ${NEXT_PUBLIC_APPWRITE_ENDPOINT}
+      APPWRITE_PROJECT_ID: ${NEXT_PUBLIC_APPWRITE_PROJECT}
+      APPWRITE_KEY: ${NEXT_APPWRITE_KEY}
+      SENTRY_DSN: ${SENTRY_DSN}
     volumes:
       - .:/app
-      - /app/node_modules
+      - node_modules_volume:/app/node_modules
+      - ./node_modules:/app/node_modules:cached
+
+volumes:
+  node_modules_volume:
