--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -42,12 +42,12 @@ jobs:
 
     - name: Run SonarQube analysis
       run: |
-        docker run --rm \
-          -e SONAR_HOST_URL="http://localhost:9000" \
-          -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
-          -v "$(pwd):/usr/src" \
-          sonarsource/sonar-scanner-cli \
-          sonar-scanner
+          docker run --rm \
+                -e SONAR_HOST_URL="http://localhost:9000" \
+                -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
+               -v "$(pwd):/usr/src" \
+               sonarsource/sonar-scanner-cli \
+               sonar-scanner -X
 
     - name: Stop SonarQube Docker container
       run: docker stop sonarqube && docker rm sonarqube
