--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -33,13 +33,13 @@ jobs:
     - name: Start SonarQube Docker container
       run: |
         docker run -d --name sonarqube \
+           -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
           -p 9000:9000 \
-          -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
-          sonarqube:community
+          sonarqube:latest
         
         # Improved waiting logic for SonarQube to be ready
         until curl -s http://localhost:9000/api/system/status | grep -q "UP"; do
-          echo "Waiting for SonarQube to start..."; sleep 20;
+          echo "Waiting for SonarQube to start..."; sleep 30;
         done
 
     - name: Run SonarQube analysis
