--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,58 +1,27 @@
-name: SonarQube Analysis
+name: Build
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+
 
 jobs:
-  sonar:
+  build:
+    name: Build and analyze
     runs-on: ubuntu-latest
-    services:
-      docker:
-        image: docker:20.10.16
-        options: --privileged
-        ports:
-          - 9000:9000
-        volumes:
-          - /var/run/docker.sock:/var/run/docker.sock
-
+    
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt'
-        java-version: '11'
-
-    - name: Start SonarQube Docker container
-      run: |
-        docker run -d --name sonarqube \
-           -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
-          -p 9000:9000 \
-          sonarqube:latest
-        
-        # Improved waiting logic for SonarQube to be ready
-         until curl -s http://localhost:9000/api/system/status | grep -q "UP"; do
-           echo "Waiting for SonarQube to start..."; sleep 30;
-         done
-
-    - name: Run SonarQube analysis
-      run: |
-        docker run --rm \
-          -e SONAR_HOST_URL="http://localhost:9000" \
-          -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
-          -v "$(pwd):/usr/src" \
-          sonarsource/sonar-scanner-cli \
-          sonar-scanner -X
-
-    - name: Check SonarQube logs
-      run: docker logs sonarqube
-
-    - name: Stop SonarQube Docker container
-      run: docker stop sonarqube && docker rm sonarqube
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
